Update iotifyo
I have done some new improvements to the java code regarding some warnings and added the delete option for the user in the ui.